<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="@color/blue">



        <ImageView
            android:id="@+id/btnNewRecipe"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/ic_list"
            android:layout_margin="4dp"
            android:background="@color/blue"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_margin="4dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="2dp"
        android:background="@color/grey">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:id="@+id/soup_button">
        </ImageButton>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/ic_soup"
            android:layout_margin="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/soups"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_margin="4dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="2dp"
        android:background="@color/grey">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:id="@+id/main_course_button">
        </ImageButton>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/ic_main_course"
            android:layout_margin="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/main_courses"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_margin="4dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="2dp"
        android:background="@color/grey">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:id="@+id/dessert_button">
        </ImageButton>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/ic_dessert"
            android:layout_margin="4dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/desserts"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_margin="4dp"/>


    </FrameLayout>

</LinearLayout>