<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EditRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editRecipeTitle"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="4dp"
            android:paddingRight="4dp"
            android:paddingLeft="4dp" />

        <ImageButton
            android:id="@+id/btnSubmitChanges"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_done"
            android:backgroundTint="@color/blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/etChangedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Minta"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/recipePrepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/etChangedPrepTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:text="123"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="Értékelés:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_gravity="center_vertical"/>


        <RatingBar
            android:id="@+id/changedRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/newDesciption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/etChangedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="textMultiLine"
            tools:text="hozzávalók:"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnEditPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kép hozzáadása"
                android:backgroundTint="@color/blue"
                android:layout_margin="15dp"/>
            <Button
                android:id="@+id/btnDeleteEditPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kép törlése"
                android:backgroundTint="@color/blue"
                android:layout_margin="15dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivEditRecipePictureContainer"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>


</LinearLayout>