<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EditRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newrecipe"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp" />

        <ImageButton
            android:id="@+id/btmSubmitRecipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_done"
            android:backgroundTint="@color/blue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etNewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Minta"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/recipePrepTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/etNewPrepTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:text="123"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="Értékelés:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_gravity="center_vertical"/>


        <RatingBar
            android:id="@+id/newRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stepSize="1"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/newDesciption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"/>

        <EditText
            android:id="@+id/etNewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="textMultiLine"
            tools:text="hozzávalók:"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnNewPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kép hozzáadása"
                android:backgroundTint="@color/blue"
                android:layout_margin="15dp"/>
            <Button
                android:id="@+id/btnDeleteNewPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kép eltávolítása"
                android:backgroundTint="@color/blue"
                android:layout_margin="15dp"
                android:enabled="false"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivNewRecipePictureContainer"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>




</LinearLayout>